--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,10 @@
 body, html {
   font-family: 'Noto Sans TC', sans-serif;
-  overflow-x: hidden;
-}
-body.modal-open {
-  overflow: hidden;
+  
 }
 *{
   transition: 0.25s;
 }
-/* body::-webkit-scrollbar {
-  display: none;
-} */
-/* .section2{
-  display: none;
-} */
-/* 主選單 */
-/* sidemenu */
 /* 主選單 */
 /* sidemenu */
 .home{
@@ -25,7 +14,7 @@ body.modal-open {
   top: 15px;
   left: 25px;
   background-color: #f0f0f0;
-  padding: 10px;
+  padding: 13px 10px;
   border-radius: 50%;
 }
 .home:hover{
@@ -51,17 +40,25 @@ visibility: hidden;
 transition: 0.5s;
 display: none;
 }
+@media (max-width: 1199.98px) { 
+  .sidenav{
+    height: 100%;
+  }
+}
 .sidenav {
-  height: 100%;
+  height: 100vh;
   width: 0; 
   position: fixed; 
   z-index: 3; 
   top: 0;
   left: 0;
   background-color: #111111; 
-  overflow: hidden; 
+  overflow: auto; 
   padding-top: 5px; 
   transition: 0.5s; 
+}
+.sidenav > .row{
+  margin-right: 0 !important;
 }
 .sidenav a {
   padding: 8px 8px 8px 32px;
@@ -116,13 +113,12 @@ a.profile{
 }
 span.protext:hover ~ img.profilepic{
 filter: brightness(1);
-
 }
-  
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
   /* -------------------------------- 
   
   Modules - reusable parts of our design
@@ -192,7 +188,7 @@ filter: brightness(1);
   }
   /* section1 */
 .section{
-  position: relative;
+  /* position: relative; */
   padding: 0;
   margin: 0;
 } 
@@ -226,7 +222,7 @@ section > .container-fluid{
 }
 .hand{
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   left: 50%;
   transform: translate(-50%,-43%);
 }
